--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
 
       body{
-        font-family: Arial;
+        font-family: '나눔스퀘어';
         padding: 10px;
         background-image: url('img/bg.png');
         background-repeat: no-repeat;
