--- a/Series.html
+++ b/Series.html
@@ -10,7 +10,7 @@
       }
 
       body{
-        font-family: Arial;
+        font-family: 'nanumsquare';
         padding: 10px;
         background-image: url('img/bg.png');
         background-repeat: no-repeat;
