--- a/Character.html
+++ b/Character.html
@@ -10,7 +10,7 @@
       }
 
       body{
-        font-family: 'nanumsquare';
+        font-family: 'nanumgothic';
         padding: 10px;
         background-image: url('img/bg.png');
         background-repeat: no-repeat;
