--- a/Character.html
+++ b/Character.html
@@ -175,7 +175,7 @@
 
             <div class='card'>
               <h2> [젤다] </h2>
-              <div class='fakeimg' style='height:200px;'> <img class="img"> <img src='img/zelda6.jfif'> <img src='img/zelda1.jfif'> <img src='img/zelda2.jfif'> <img src='img/zelda4.jpg'> </div>
+              <div class='fakeimg' style='height:200px;'> <img class="img"> <img src='img/zelda6.jfif'> <img src='img/zelda1.jfif'> <img src='img/zelda2.jfif'> </div>
                 <p> <br> 젤다 공주는 지혜의 신 넬(Lanaryu)의 권능 지혜의 트라이포스의 선택을 받은 구세의 영웅이다.
                   <br> 용기의 신 펠(Farore)과 권능 용기의 트라이포스의 선택을 받은 용사 링크와 가논 퇴치를 위해 협력한다.
                   <br>
